Fixed comment in Astrobee_Euler.ipynb (quaternion -> Euler)

--- a/Astrobee_Euler.ipynb
+++ b/Astrobee_Euler.ipynb
@@ -84,7 +84,7 @@
     "ISS = me.ReferenceFrame('N') # ISS RF\n",
     "B = me.ReferenceFrame('B') # body RF\n",
     "\n",
-    "q1, q2, q3 = me.dynamicsymbols('q1:4') # attitude coordinates (quaternion angles)\n",
+    "q1, q2, q3 = me.dynamicsymbols('q1:4') # attitude coordinates (Euler angles)\n",
     "\n",
     "B.orient(ISS, 'Body', (q1, q2, q3), 'xyz') # body RF"
    ]
