--- a/Astrobee_Euler.ipynb
+++ b/Astrobee_Euler.ipynb
@@ -1938,17 +1938,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "A_matrix = np.array(sm.simplify(A.subs(sys.constants))).astype(np.float64)\n",
-    "sio.savemat('Matrices/A_matrix.mat', {'A_matrix': A_matrix})"
+    "sio.savemat('Control/Matrices/A_matrix.mat', {'A_matrix': A_matrix})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1983,7 +1983,7 @@
        "⎣u₃ ⎦"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1994,7 +1994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -2053,7 +2053,7 @@
        "        0                 0        ⎦"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2065,25 +2065,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
     "B_matrix = np.array(sm.simplify(B.subs(sys.constants))).astype(np.float64)\n",
     "\n",
     "if configuration == \"original\":\n",
-    "    sio.savemat('Matrices/B_original.mat', {'B_original': B_matrix})\n",
+    "    sio.savemat('Control/Matrices/B_original.mat', {'B_original': B_matrix})\n",
     "    \n",
     "elif configuration == \"stowed\":\n",
-    "    sio.savemat('Matrices/B_stowed.mat', {'B_stowed': B_matrix})\n",
+    "    sio.savemat('Control/Matrices/B_stowed.mat', {'B_stowed': B_matrix})\n",
     "\n",
     "elif configuration == \"deployed\":\n",
-    "    sio.savemat('Matrices/B_deployed.mat', {'B_deployed': B_matrix})"
+    "    sio.savemat('Control/Matrices/B_deployed.mat', {'B_deployed': B_matrix})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -2118,7 +2118,7 @@
        "⎣           0            ⎦"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2129,7 +2129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -2164,7 +2164,7 @@
        "⎝⎣q₃ ⎦  ⎣           u₃           ⎦⎠"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2175,28 +2175,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Plant Transfer-Function Matrix (from MATLAB)\n",
-    "\n",
-    "# s = sm.symbols('s')\n",
-    "\n",
-    "# Gp = sm.Matrix([[(1/s)*sm.eye(6)], [(1/s**2)*sm.eye(6)]])\n",
-    "\n",
-    "# Gp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "394da2322cf3455aa81700e8412d8526",
+       "model_id": "3ec364e4fb8f48fd935648c21f3e6074",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2214,13 +2199,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "064a62065efc406ea64404a826562639",
+       "model_id": "7a233635800b46f8b158d79368ef3e7a",
        "version_major": 2,
        "version_minor": 0
       },
