--- a/Astrobee_Euler.ipynb
+++ b/Astrobee_Euler.ipynb
@@ -11,10 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p align=\"center\">\n",
-    "  <center><img src=\"Astrobee.png\" width=\"500\" height=\"276\"><center>\n",
-    "  <center>Source: <a href=\"https://ntrs.nasa.gov/search.jsp?R=20180003515\">Fl&uumlckiger et al. (2018)</a><center>\n",
-    "</p>"
+    "<center><video controls src=\"Astrobee.mov\" width=\"500\" /></center>\n",
+    "\n",
+    "<!-- ##### <center>The vehicle displays extreme instability, with the maximum levitation height set to ten meters.</center> -->"
    ]
   },
   {
